# wallet

./: .env.example  Cargo.toml  README.md  docker-compose.yml
frontend/: README.md  env.example  package-lock.json  package.json  vite.config.ts
frontend/scripts/: seed.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 20240101000001_create_users_table.sql  20240101000002_create_transactions_table.sql  20240101000003_create_wallets_table.sql
src/: config.rs  database.rs  handlers.rs  main.rs  models.rs  queries.rs
